containters/helmcharts/bp-k8s-infra/ingress-test.yaml
---
# Source: cs-k8s-infra/charts/cs-k8s-infra/charts/radcom-ingress-nginx-chart/templates/controller-service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: radcom-ingress-nginx-chart-1.16.0
    app.kubernetes.io/name: radcom-ingress-nginx-chart
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.8.0"
    app.kubernetes.io/part-of: radcom-ingress-nginx-chart
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: radcom-ingress-nginx-chart-controller-metrics
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 10254
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/name: radcom-ingress-nginx-chart
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: controller
---
# Source: cs-k8s-infra/charts/cs-k8s-infra/charts/radcom-ingress-nginx-chart/templates/controller-service-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: radcom-ingress-nginx-chart-1.16.0
    app.kubernetes.io/name: radcom-ingress-nginx-chart
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.8.0"
    app.kubernetes.io/part-of: radcom-ingress-nginx-chart
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: radcom-ingress-nginx-chart-controller-admission
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: https-webhook
      port: 443
      targetPort: webhook
      appProtocol: https
  selector:
    app.kubernetes.io/name: radcom-ingress-nginx-chart
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: controller
---
# Source: cs-k8s-infra/charts/cs-k8s-infra/charts/radcom-ingress-nginx-chart/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: "openshiftpoc-ip-pools"
  labels:
    helm.sh/chart: radcom-ingress-nginx-chart-1.16.0
    app.kubernetes.io/name: radcom-ingress-nginx-chart
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.8.0"
    app.kubernetes.io/part-of: radcom-ingress-nginx-chart
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: radcom-ingress-nginx-chart-controller
  namespace: default
spec:
  type: LoadBalancer
  ipFamilyPolicy: SingleStack
  ipFamilies: 
    - IPv4
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      appProtocol: http
      nodePort: 30080
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
      appProtocol: https
      nodePort: 30443
  selector:
    app.kubernetes.io/name: radcom-ingress-nginx-chart
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: controller
---
# Source: cs-k8s-infra/charts/cs-k8s-infra/charts/radcom-ingress-nginx-chart/templates/controller-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    helm.sh/chart: radcom-ingress-nginx-chart-1.16.0
    app.kubernetes.io/name: radcom-ingress-nginx-chart
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.8.0"
    app.kubernetes.io/part-of: radcom-ingress-nginx-chart
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: radcom-ingress-nginx-chart-controller
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: radcom-ingress-nginx-chart
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: controller
  revisionHistoryLimit: 10
  minReadySeconds: 0
  template:
    metadata:
      annotations:
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
      labels:
        helm.sh/chart: radcom-ingress-nginx-chart-1.16.0
        app.kubernetes.io/name: radcom-ingress-nginx-chart
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "1.8.0"
        app.kubernetes.io/part-of: radcom-ingress-nginx-chart
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: controller
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: controller
          image: "nexus3-prod.radcom.co.il:8084/registry.k8s.io/ingress-nginx/controller:v1.8.0"
          imagePullPolicy: Always
          lifecycle: 
            preStop:
              exec:
                command:
                - /wait-shutdown
          args:
            - /nginx-ingress-controller
            - --election-id=radcom-ingress-nginx-chart-leader
            - --controller-class=k8s.io/ingress-nginx
            - --ingress-class=nginx
            - --configmap=$(POD_NAMESPACE)/radcom-ingress-nginx-chart-controller
            - --tcp-services-configmap=$(POD_NAMESPACE)/radcom-ingress-nginx-chart-tcp
            - --udp-services-configmap=$(POD_NAMESPACE)/radcom-ingress-nginx-chart-udp
            - --watch-namespace=$(POD_NAMESPACE)
            - --validating-webhook=:8443
            - --validating-webhook-certificate=/usr/local/certificates/cert
            - --validating-webhook-key=/usr/local/certificates/key
            - --watch-ingress-without-class=true
            - --default-ssl-certificate=$(POD_NAMESPACE)/tls-secret
            - --publish-status-address=kuberiq-home-vip
          securityContext: 
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
            runAsUser: 101
            allowPrivilegeEscalation: true
          livenessProbe: 
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe: 
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: metrics
              containerPort: 10254
              protocol: TCP
            - name: webhook
              containerPort: 8443
              protocol: TCP
            - name: 30093-tcp
              containerPort: 30093
              protocol: TCP
            - name: 30201-tcp
              containerPort: 30201
              protocol: TCP
            - name: 30202-tcp
              containerPort: 30202
              protocol: TCP
            - name: 30203-tcp
              containerPort: 30203
              protocol: TCP
            - name: 30204-tcp
              containerPort: 30204
              protocol: TCP
            - name: 30205-tcp
              containerPort: 30205
              protocol: TCP
            - name: 30206-tcp
              containerPort: 30206
              protocol: TCP
            - name: 30207-tcp
              containerPort: 30207
              protocol: TCP
            - name: 30208-tcp
              containerPort: 30208
              protocol: TCP
            - name: 30209-tcp
              containerPort: 30209
              protocol: TCP
            - name: 30210-tcp
              containerPort: 30210
              protocol: TCP
            - name: 5353-udp
              containerPort: 5353
              protocol: UDP
          volumeMounts:
            - name: webhook-cert
              mountPath: /usr/local/certificates/
              readOnly: true
          resources: 
            limits:
              cpu: 5
              memory: 10Gi
            requests:
              cpu: 100m
              memory: 90Mi
      nodeSelector: 
        kubernetes.io/os: linux
      serviceAccountName: radcom-ingress-nginx-chart
      terminationGracePeriodSeconds: 300
      volumes:
        - name: webhook-cert
          secret:
            secretName: radcom-ingress-nginx-chart-admission
---
# Source: cs-k8s-infra/charts/cs-k8s-infra/charts/radcom-crds-chart/templates/crd-certificaterequests.yaml
# Taken from https://raw.githubusercontent.com/cert-manager/cert-manager/v1.13.3/deploy/crds/crd-certificaterequests.yaml
---
# Source: cs-k8s-infra/charts/cs-k8s-infra/charts/radcom-crds-chart/templates/crd-certificates.yaml
# Taken from https://raw.githubusercontent.com/cert-manager/cert-manager/v1.13.3/deploy/crds/crd-certificates.yaml
---
# Source: cs-k8s-infra/charts/cs-k8s-infra/charts/radcom-crds-chart/templates/crd-challenges.yaml
# Taken from https://raw.githubusercontent.com/cert-manager/cert-manager/v1.13.3/deploy/crds/crd-challenges.yaml
---
# Source: cs-k8s-infra/charts/cs-k8s-infra/charts/radcom-crds-chart/templates/crd-clusterissuers.yaml
# Taken from https://raw.githubusercontent.com/cert-manager/cert-manager/v1.13.3/deploy/crds/crd-clusterissuers.yaml
---
# Source: cs-k8s-infra/charts/cs-k8s-infra/charts/radcom-crds-chart/templates/crd-issuers.yaml
# Taken from https://raw.githubusercontent.com/cert-manager/cert-manager/v1.13.3/deploy/crds/crd-issuers.yaml
---
# Source: cs-k8s-infra/charts/cs-k8s-infra/charts/radcom-crds-chart/templates/crd-orders.yaml
# Taken from https://raw.githubusercontent.com/cert-manager/cert-manager/v1.13.3/deploy/crds/crd-orders.yaml
---
# Source: cs-k8s-infra/charts/cs-k8s-infra/charts/radcom-ingress-nginx-chart/templates/admission-webhooks/validating-webhook.yaml
# before changing this value, check the required kubernetes version
# https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#prerequisites
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
  labels:
    helm.sh/chart: radcom-ingress-nginx-chart-1.16.0
    app.kubernetes.io/name: radcom-ingress-nginx-chart
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.8.0"
    app.kubernetes.io/part-of: radcom-ingress-nginx-chart
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
  name: radcom-ingress-nginx-chart-admission
webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    matchPolicy: Equivalent
    rules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        namespace: "default"
        name: radcom-ingress-nginx-chart-controller-admission
        path: /networking/v1/ingresses
